# my-fastapi-project

./: .gitignore  Makefile  README.md  alembic.ini  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  setup_postgres.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  menu.py  orders.py  users.py
app/core/: __init__.py  config.py  security.py
app/db/: __init__.py  base.py
app/models/: __init__.py  menu_item.py  order.py  order_item.py  user.py
app/schemas/: __init__.py  auth.py  menu.py  order.py  user.py
app/services/: menu_service.py  order_service.py  user_service.py
scripts/: migrate_structure.py
tests/: conftest.py  test_auth.py  test_auth_updated.py  test_menu.py  test_menu_updated.py  test_orders.py  test_orders_updated.py
